<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">HabitTracker</string>

    <!-- Label for overflow menu option that inserts fake pet data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all pet data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Habits</string>

    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_Habit">Add a Habit</string>

    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <string name="name_activity">Name of Activity</string>

    <string name="start_date">yyyy-MM-dd</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_pomodoro">Amount of Pomodoros</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_comments">Comments / Other:</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="commentsAndOther">Add anything that is related to the habit</string>

    <!-- Text hint for breed field in the editor [CHAR LIMIT=30] -->
    <string name="hint_pet_breed">Breed</string>

    <string name="a0">0</string>
    <string name="a1">1</string>
    <string name="a2">2</string>
    <string name="a3">3</string>
    <string name="a4">4</string>
    <string name="a5">5</string>
    <string name="a6">6</string>
    <string name="a7">7</string>
    <string name="a8">8</string>
    <string name="a9">9</string>
    <string name="a10">10</string>

</resources>
